Partially handle LMDE repositories

--- a/files/etc/mint-software-properties-tool/repositories.conf
+++ b/files/etc/mint-software-properties-tool/repositories.conf
@@ -7,9 +7,14 @@ advanced_components=main,upstream,import
 
 [Debian]
 
-DistributionID=Debian
+DistributionID=LinuxMint
 codename=testing
 release=wheezy
+mirrors_list=/usr/share/linuxmint/mint-debian-mirrors/mirrors.list
+BaseURI=http://debian.linuxmint.com/
+MatchURI=debian.linuxmint.com
+components=main,contrib,non-free
+path=incoming
 
 #~ [Ubuntu]
 #~ 
