Handle children repositories (far from perfect, gives a general idea of how we might handle them)

--- a/files/etc/mint-software-properties-tool/repositories.conf
+++ b/files/etc/mint-software-properties-tool/repositories.conf
@@ -15,6 +15,12 @@ BaseURI=http://debian.linuxmint.com/
 MatchURI=debian.linuxmint.com
 components=main,contrib,non-free
 path=incoming
+child_2_codename=testing/updates
+child_2_components=main,contrib,non-free
+child_2_path=incoming/security
+child_1_codename=testing
+child_1_components=main,contrib,non-free
+child_1_path=incoming/multimedia
 
 #~ [Ubuntu]
 #~ 
