Fixed base detection in nadia conf

--- a/usr/share/mintsources/nadia/mintsources.conf
+++ b/usr/share/mintsources/nadia/mintsources.conf
@@ -19,5 +19,5 @@ description=Unstable packages (romeo)
 
 [detection]
 main_identifier=main upstream import
-base_identifier=main restricted universe multiverse
+base_identifier=-updates main restricted universe multiverse
 
