Added full support for keys (remove, add from file, download from keyserver)

--- a/usr/share/mintsources/nadia/mintsources.conf
+++ b/usr/share/mintsources/nadia/mintsources.conf
@@ -21,3 +21,31 @@ description=Unstable packages (romeo)
 main_identifier=main upstream import
 base_identifier=-updates main restricted universe multiverse
 
+[key_1]
+pub=437D05B5
+uid=Ubuntu Archive Automatic Signing Key <ftpmaster@ubuntu.com>
+
+[key_2]
+pub=FBB75451
+uid=Ubuntu CD Image Automatic Signing Key <cdimage@ubuntu.com>
+
+[key_3]
+pub=C0B21F32
+uid=Ubuntu Archive Automatic Signing Key (2012) <ftpmaster@ubuntu.com>
+
+[key_4]
+pub=EFE21092
+uid=Ubuntu CD Image Automatic Signing Key (2012) <cdimage@ubuntu.com>
+
+[key_5]
+pub=0FF405B2
+uid=Clement Lefebvre (Linux Mint Package Repository v1) <root@linuxmint.com>
+
+[key_6]
+pub=0C5A2783
+uid=Medibuntu Packaging Team <admin@lists.medibuntu.org>
+
+[key_7]
+pub=46D7E7CF
+uid=GetDeb Archive Automatic Signing Key <archive@getdeb.net>
+
