'Backport' instead of 'Backports' as the repository is named

--- a/usr/share/mintsources/olivia/mintsources.conf
+++ b/usr/share/mintsources/olivia/mintsources.conf
@@ -10,7 +10,7 @@ mirrors=/usr/share/python-apt/templates/LinuxMint.mirrors
 base_mirrors=/usr/share/python-apt/templates/Ubuntu.mirrors
 
 [optional_component_1]
-name=backports
+name=backport
 description=Backported packages (backports)
 
 [optional_component_2]
