Made PPA feature optional

--- a/usr/share/mintsources/enigma-1306/mintsources.conf
+++ b/usr/share/mintsources/enigma-1306/mintsources.conf
@@ -2,6 +2,7 @@
 description=Netrunner 5 - Enigma (13.06)
 codename=enigma-1306
 base_codename=raring
+use_ppas=true
 
 [mirrors]
 default=http://packages.netrunner-os.com
