--- a/usr/share/mintsources/nadia/mintsources.conf
+++ b/usr/share/mintsources/nadia/mintsources.conf
@@ -2,6 +2,7 @@
 description=Linux Mint 14 "Nadia"
 codename=nadia
 base_codename=quantal
+use_ppas=true
 
 [mirrors]
 default=http://packages.linuxmint.com
