--- a/usr/share/mintsources/olivia/mintsources.conf
+++ b/usr/share/mintsources/olivia/mintsources.conf
@@ -2,6 +2,7 @@
 description=Linux Mint 15 "Olivia"
 codename=olivia
 base_codename=raring
+use_ppas=true
 
 [mirrors]
 default=http://packages.linuxmint.com
