--- a/usr/share/mintsources/flurry/mintsources.conf
+++ b/usr/share/mintsources/flurry/mintsources.conf
@@ -11,8 +11,8 @@ mirrors=/usr/share/python-apt/templates/Snowlinux.mirrors
 base_mirrors=/usr/share/python-apt/templates/Debian.mirrors
 
 [optional_component_1]
-name=backports
-description=Backported packages (backports)
+name=backport
+description=Backported packages (backport)
 
 [optional_component_2]
 name=unstable
