--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -1,6 +1,120 @@
 [Desktop Entry]
 Name=Software Sources
+Name[sq]=Software Sources
+Name[ru]=Источники приложений
+Name[pt_BR]=Fontes de Aplicativos
+Name[ar]=مصادر البرمجيات
+Name[ka]=Software Sources
+Name[lv]=Programmatūras avoti
+Name[sr]=Извори програма
+Name[ga]=Foinsí Bogearraí
+Name[ia]=Software Sources
+Name[zh_TW]=軟體來源
+Name[sr@ijekavianlatin]=Извори програма
+Name[fr_CA]=Sources de logiciels
+Name[sr@latin]=Извори програма
+Name[it]=Sorgenti software
+Name[bn_IN]=সফটওয়্যারের উৎসসমূহ
+Name[gd]=Bunan-tùs a' bhathair-bhuig
+Name[tr]=Yazılım Kaynakları
+Name[pt]=Repositórios
+Name[ms]=Sumber Perisian
+Name[cy]=Ffynonellau Meddalwedd
+Name[hu]=Szoftverforrások
+Name[es]=Orígenes del software
+Name[fa]=منابع برنامه ها
+Name[ky]=Программа булактары
+Name[zh_CN]=软件源
+Name[ca@valencia]=Fonts del programari
+Name[gl]=Orixes do software
+Name[en_CA]=Software Sources
+Name[bn]=সফটওয়্যারের উৎসসমূহ
+Name[id]=Sumber Perangkat Lunak
+Name[ja]=ソフトウェアソース
+Name[mr]=सॉफ्टवेयर स्रोत
+Name[hr]=Softver repozitoriji
+Name[he]=מקורות תוכנה
+Name[da]=Softwarekilder
+Name[sk]=Zdroje softvéru
+Name[nn]=Software Sources
+Name[zh_HK]=軟件來源
+Name[en_GB]=Software Sources
+Name[vi]=Nguồn Phần mềm
+Name[fi]=Software Sources
+Name[fr]=Sources de logiciels
+Name[sv]=Programkällor
+Name[et]=Tarkvaraallikad
+Name[eu]=Software-jatorriak
+Name[ca]=Fonts del programari
+Name[am]=የሶፍትዌር ምንጮች
+Name[uk]=Джерела програмного забезпечення
+Name[nl]=Softwarebronnen
+Name[pt_PT]=Repositórios
+Name[eo]=Software Sources
+Name[de]=Software-Quellen
+Name[is]=Hugbúnaðarupptök
+Name[cs]=Zdroje softwaru
+Name[ro]=Software Sources
+Name[sl]=Programski viri
+Name[pl]=Zasoby oprogramowania
 Comment=Configure the sources for installable software and updates
+Comment[sq]=Configure the sources for installable software and updates
+Comment[ru]=Настроить источники приложений и обновлений
+Comment[pt_BR]=Configurar as fontes para instalação e atualização de Software
+Comment[ar]=إعداد المصادر للبرمجيات والتحديثات القابلة للتثبيت
+Comment[ka]=Configure the sources for installable software and updates
+Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
+Comment[sr]=Подеси инсталационе изворе за програме и ажурирања
+Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
+Comment[ia]=Configure the sources for installable software and updates
+Comment[zh_TW]=設定更新與可安裝軟體的來源
+Comment[sr@ijekavianlatin]=Подеси инсталационе изворе за програме и ажурирања
+Comment[fr_CA]=Configurer les sources d'installation de logiciels et de mises à jour
+Comment[sr@latin]=Подеси инсталационе изворе за програме и ажурирања
+Comment[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
+Comment[bn_IN]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
+Comment[gd]=Rèitich na bunan-tùs airson bathar-bog so-stàlaidh agus ùrachaidhean
+Comment[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
+Comment[pt]=Configurar repositórios de aplicações e atualizações
+Comment[ms]=Konfigur sumber untuk perisian boleh pasang dan kemaskininya
+Comment[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
+Comment[hu]=Telepíthető szoftverek és frissítések forrásának beállítása
+Comment[es]=Configure los orígenes de las actualizaciones y el software instalable
+Comment[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
+Comment[ky]=Configure the sources for installable software and updates
+Comment[zh_CN]=配置用于安装和升级软件的源
+Comment[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
+Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
+Comment[en_CA]=Configure the sources for installable software and updates
+Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
+Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
+Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
+Comment[hr]=Postavite izvore za instalaciju i ažuriranje softvera
+Comment[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
+Comment[da]=Konfigurér kilderne for installérbar software og opdateringer
+Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
+Comment[nn]=Configure the sources for installable software and updates
+Comment[zh_HK]=設置可安裝的軟件及其更新之來源。
+Comment[en_GB]=Configure the sources for installable software and updates
+Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
+Comment[fi]=Configure the sources for installable software and updates
+Comment[fr]=Configurer les sources d'installation de logiciels et de mises à jour
+Comment[sv]=Konfigurera källorna för installerbara program och uppdateringar
+Comment[et]=Seadista allikaid paigaldatavale tarkvarale ja uuendustele
+Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
+Comment[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
+Comment[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
+Comment[uk]=Налаштуйте джерела встановлюваного програмного забезпечення і оновлень
+Comment[nl]=Stel de bronnen in voor installeerbare programma's en updates
+Comment[pt_PT]=Configurar repositórios de aplicações e atualizações
+Comment[eo]=Configure the sources for installable software and updates
+Comment[de]=Quellen zum Installieren von Software und Aktualisierungen einrichten
+Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
+Comment[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
+Comment[ro]=Configure the sources for installable software and updates
+Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
+Comment[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 Exec=software-sources
 Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
 Terminal=false
