--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.7.2
 
 Package: mintsources
 Architecture: all
-Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2
+Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, python-pycurl
 Description: Software Sources configuration tool
  Configure the sources for installable software and updates.
