GNOME based desktop file hidden in KDE

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -142,3 +142,4 @@ X-GNOME-Settings-Panel=software-properties
 MimeType=text/x-apt-sources-list;
 X-KDE-SubstituteUID=true
 X-Ubuntu-Gettext-Domain=software-properties
+NotShowIn=KDE
