--- a/usr/share/applications/kde4/mintsources.desktop
+++ b/usr/share/applications/kde4/mintsources.desktop
@@ -2,14 +2,17 @@
 Name=Software Sources
 Name[am]=የሶፍትዌር ምንጮች
 Name[ar]=مصادر البرمجيات
+Name[be]=Крыніцы праграм
+Name[be@latin]=Крыніцы праграм
+Name[bg]=Софтуерни източници
 Name[bn]=সফটওয়্যারের উৎসসমূহ
 Name[bn_IN]=সফটওয়্যারের উৎসসমূহ
 Name[ca]=Fonts del programari
 Name[ca@valencia]=Fonts del programari
 Name[cs]=Zdroje softwaru
 Name[cy]=Ffynonellau Meddalwedd
-Name[da]=Softwarekilder
-Name[de]=Software-Paketquellen
+Name[da]=Programkilder
+Name[de]=Anwendungspaketquellen
 Name[el]=Πηγές Λογισμικού
 Name[eo]=Programaraj fontoj
 Name[es]=Orígenes del software
@@ -17,6 +20,7 @@ Name[es_AR]=Orígenes del software
 Name[et]=Tarkvaraallikad
 Name[eu]=Software-jatorriak
 Name[fa]=منابع برنامه ها
+Name[fi]=Ohjelmalähteet
 Name[fr]=Sources de logiciels
 Name[fr_CA]=Sources de logiciels
 Name[ga]=Foinsí Bogearraí
@@ -30,24 +34,34 @@ Name[is]=Hugbúnaðarupptök
 Name[it]=Sorgenti software
 Name[ja]=ソフトウェアソース
 Name[ky]=Программа булактары
+Name[lt]=Programinės įrangos saugyklos
 Name[lv]=Programmatūras avoti
+Name[ml]=സോഫ്റ്റ്‌വെയര്‍ സ്രോതസ്സുകള്‍
 Name[mr]=सॉफ्टवेयर स्रोत
 Name[ms]=Sumber Perisian
+Name[nds]=Paketquellen
+Name[ne]=सफ्टवेयर स्रोतहरु
 Name[nl]=Softwarebronnen
+Name[oc]=Fonts de mesa a jorn
 Name[om]=Madda mosajjii
+Name[pa]=ਸਾਫਟਵੇਅਰ ਸਰੋਤ
 Name[pl]=Zasoby oprogramowania
 Name[pt]=Repositórios
 Name[pt_BR]=Fontes de Aplicativos
 Name[pt_PT]=Repositórios
 Name[ro]=Surse software
 Name[ru]=Источники приложений
+Name[si]=මෘදුකාංග මූලාශ්‍රයන්
 Name[sk]=Zdroje softvéru
 Name[sl]=Programski viri
+Name[sq]=Burimet e Programeve
 Name[sr]=Извори програма
 Name[sr@ijekavianlatin]=Извори програма
 Name[sr@latin]=Извори програма
 Name[sv]=Programkällor
 Name[ta]=மென்பொருள் மூலங்கள்
+Name[tg]=Манбаъҳои нармафзор
+Name[th]=แหล่งที่มาของซอฟต์แวร์
 Name[tr]=Yazılım Kaynakları
 Name[uk]=Джерела програмного забезпечення
 Name[vi]=Nguồn Phần mềm
@@ -57,14 +71,17 @@ Name[zh_TW]=軟體來源
 Comment=Configure the sources for installable software and updates
 Comment[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
 Comment[ar]=إعداد المصادر للبرمجيات والتحديثات القابلة للتثبيت
+Comment[be]=Наставіць крыніцы праграм і абнаўленняў
+Comment[be@latin]=Наставіць крыніцы праграм і абнаўленняў
+Comment[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 Comment[bn_IN]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 Comment[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
 Comment[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
 Comment[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
 Comment[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
-Comment[da]=Konfigurér kilderne for installérbar software og opdateringer
-Comment[de]=Quellen zum Installieren von Software und Aktualisierungen einrichten
+Comment[da]=Konfigurér kilderne for installérbare programmer og opdateringer
+Comment[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 Comment[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 Comment[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
 Comment[es]=Configure los orígenes de las actualizaciones y el software instalable
@@ -72,6 +89,7 @@ Comment[es_AR]=Configure los orígenes de las actualizaciones y el software inst
 Comment[et]=Seadista allikaid paigaldatavale tarkvarale ja uuendustele
 Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 Comment[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
+Comment[fi]=Hallitse ohjelmalähteet asennettaville sovelluksille ja päivityksille.
 Comment[fr]=Configurer les sources d'installation de logiciels et de mises à jour
 Comment[fr_CA]=Configurer les sources d'installation de logiciels et de mises à jour
 Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
@@ -84,10 +102,14 @@ Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
 Comment[ms]=Konfigur sumber untuk perisian boleh pasang dan kemaskininya
+Comment[nds]=Installationsquellen für Pakete und Updates bearbeiten
 Comment[nl]=Stel de bronnen in voor installeerbare programma's en updates
+Comment[oc]=Configurar las fonts d'installacion de logicials e de mesas a jorn
+Comment[pa]=ਇੰਸਟਾਲ ਯੋਗ ਸਾਫਟਵੇਅਰ ਅਤੇ ਅੱਪਡੇਟ ਲਈ ਸਰੋਤਾਂ ਦੀ ਸੰਰਚਨਾ ਕਰੋ
 Comment[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 Comment[pt]=Configurar repositórios de aplicações e atualizações
 Comment[pt_BR]=Configurar as fontes para instalação e atualização de Software
@@ -96,28 +118,34 @@ Comment[ro]=Configurează sursele pentru software instalabil şi actualizări
 Comment[ru]=Настроить источники приложений и обновлений
 Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
+Comment[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
 Comment[sr]=Подеси инсталационе изворе за програме и ажурирања
 Comment[sr@ijekavianlatin]=Подеси инсталационе изворе за програме и ажурирања
 Comment[sr@latin]=Подеси инсталационе изворе за програме и ажурирања
 Comment[sv]=Konfigurera källorna för installerbara program och uppdateringar
 Comment[ta]=நிறுவத்தக்க மென்பொருட்கள் மற்றும் புதுப்பித்தல்களுக்கான மூலங்களைக் கட்டமைக்கவும்
+Comment[tg]=Танзим кардани манбаҳо барои нармафзор ва навсозиҳои насбшаванда
+Comment[th]=ปรับแต่งแหล่งของซอฟต์แวร์ที่ใช้ในการติดตั้งและปรับปรุงรุ่น
 Comment[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
 Comment[uk]=Налаштуйте джерела встановлюваного програмного забезпечення і оновлень
 Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 Comment[zh_CN]=配置用于安装和升级软件的源
 Comment[zh_HK]=設置可安裝的軟件及其更新之來源。
-Comment[zh_TW]=設定更新與可安裝軟體的來源
+Comment[zh_TW]=設定可安裝軟體與更新的來源
 GenericName=Configure the sources for installable software and updates
 GenericName[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
 GenericName[ar]=إعداد المصادر للبرمجيات والتحديثات القابلة للتثبيت
+GenericName[be]=Наставіць крыніцы праграм і абнаўленняў
+GenericName[be@latin]=Наставіць крыніцы праграм і абнаўленняў
+GenericName[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 GenericName[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 GenericName[bn_IN]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
 GenericName[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
 GenericName[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
 GenericName[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
 GenericName[cy]=Ffurfweddu y ffynonellau ar gyfer meddalwedd gosodadwy a diweddariadau
-GenericName[da]=Konfigurér kilderne for installérbar software og opdateringer
-GenericName[de]=Quellen zum Installieren von Software und Aktualisierungen einrichten
+GenericName[da]=Konfigurér kilderne for installérbare programmer og opdateringer
+GenericName[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einrichten
 GenericName[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 GenericName[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
 GenericName[es]=Configure los orígenes de las actualizaciones y el software instalable
@@ -125,6 +153,7 @@ GenericName[es_AR]=Configure los orígenes de las actualizaciones y el software 
 GenericName[et]=Seadista allikaid paigaldatavale tarkvarale ja uuendustele
 GenericName[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 GenericName[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
+GenericName[fi]=Hallitse ohjelmalähteet asennettaville sovelluksille ja päivityksille.
 GenericName[fr]=Configurer les sources d'installation de logiciels et de mises à jour
 GenericName[fr_CA]=Configurer les sources d'installation de logiciels et de mises à jour
 GenericName[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
@@ -137,10 +166,14 @@ GenericName[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 GenericName[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 GenericName[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 GenericName[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+GenericName[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 GenericName[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 GenericName[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
 GenericName[ms]=Konfigur sumber untuk perisian boleh pasang dan kemaskininya
+GenericName[nds]=Installationsquellen für Pakete und Updates bearbeiten
 GenericName[nl]=Stel de bronnen in voor installeerbare programma's en updates
+GenericName[oc]=Configurar las fonts d'installacion de logicials e de mesas a jorn
+GenericName[pa]=ਇੰਸਟਾਲ ਯੋਗ ਸਾਫਟਵੇਅਰ ਅਤੇ ਅੱਪਡੇਟ ਲਈ ਸਰੋਤਾਂ ਦੀ ਸੰਰਚਨਾ ਕਰੋ
 GenericName[pl]=Konfiguruje zasoby pakietów oprogramowania i aktualizacji
 GenericName[pt]=Configurar repositórios de aplicações e atualizações
 GenericName[pt_BR]=Configurar as fontes para instalação e atualização de Software
@@ -149,23 +182,27 @@ GenericName[ro]=Configurează sursele pentru software instalabil şi actualizăr
 GenericName[ru]=Настроить источники приложений и обновлений
 GenericName[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 GenericName[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
+GenericName[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
 GenericName[sr]=Подеси инсталационе изворе за програме и ажурирања
 GenericName[sr@ijekavianlatin]=Подеси инсталационе изворе за програме и ажурирања
 GenericName[sr@latin]=Подеси инсталационе изворе за програме и ажурирања
 GenericName[sv]=Konfigurera källorna för installerbara program och uppdateringar
 GenericName[ta]=நிறுவத்தக்க மென்பொருட்கள் மற்றும் புதுப்பித்தல்களுக்கான மூலங்களைக் கட்டமைக்கவும்
+GenericName[tg]=Танзим кардани манбаҳо барои нармафзор ва навсозиҳои насбшаванда
+GenericName[th]=ปรับแต่งแหล่งของซอฟต์แวร์ที่ใช้ในการติดตั้งและปรับปรุงรุ่น
 GenericName[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
 GenericName[uk]=Налаштуйте джерела встановлюваного програмного забезпечення і оновлень
 GenericName[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 GenericName[zh_CN]=配置用于安装和升级软件的源
 GenericName[zh_HK]=設置可安裝的軟件及其更新之來源。
-GenericName[zh_TW]=設定更新與可安裝軟體的來源
+GenericName[zh_TW]=設定可安裝軟體與更新的來源
 Exec=software-sources
 Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
+NoDisplay=true
 Terminal=false
 Type=Application
 Encoding=UTF-8
 MimeType=text/x-apt-sources-list;
 Categories=Qt;KDE;Settings;
 X-KDE-StartupNotify=false
-OnlyShowIn=KDE
+OnlyShowIn=KDE;
