--- a/debian/control
+++ b/debian/control
@@ -2,12 +2,20 @@ Source: mintsources
 Section: admin
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 9), python
+Standards-Version: 3.9.5
 
 Package: mintsources
 Architecture: all
-Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, python-pycurl, synaptic
+Depends:
+ ${misc:Depends},
+ ${python:Depends},
+ python (>= 2.4),
+ python (<< 3),
+ python-gtk2,
+ python-glade2,
+ python-pycurl,
+ synaptic
 Conflicts: software-properties-gtk, software-properties-kde
 Description: Software Sources configuration tool
  Configure the sources for installable software and updates.
