Added Ubuntu Extras key to Qiana

--- a/usr/share/mintsources/qiana/mintsources.conf
+++ b/usr/share/mintsources/qiana/mintsources.conf
@@ -50,3 +50,7 @@ uid=Medibuntu Packaging Team <admin@lists.medibuntu.org>
 pub=46D7E7CF
 uid=GetDeb Archive Automatic Signing Key <archive@getdeb.net>
 
+[key_8]
+pub=3E5C1192
+uid=Ubuntu Extras Archive Automatic Signing Key <ftpmaster@ubuntu.com>
+
