--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,6 @@ Package: mintsources
 Architecture: all
 Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, python-pycurl, synaptic
 Conflicts: software-properties-gtk, software-properties-kde
+Provides: software-properties-gtk, software-properties-kde
 Description: Software Sources configuration tool
  Configure the sources for installable software and updates.
