Betsy: Fixed identifier

--- a/usr/share/mintsources/betsy/mintsources.conf
+++ b/usr/share/mintsources/betsy/mintsources.conf
@@ -16,7 +16,7 @@ description=Unstable packages (romeo)
 
 [detection]
 main_identifier=main upstream import
-base_identifier=testing main contrib non-free
+base_identifier=-updates main contrib non-free
 
 [key_1]
 pub=473041FA
