--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,8 @@ Source: mintsources
 Section: admin
 Priority: optional
 Maintainer: Clement Lefebvre <root@linuxmint.com>
-Build-Depends: debhelper (>= 5)
-Standards-Version: 3.7.2
+Build-Depends: debhelper (>= 9), python
+Standards-Version: 3.9.5
 
 Package: mintsources
 Architecture: all
