--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,36 @@ Standards-Version: 3.9.5
 Package: mintsources
 Architecture: all
 Depends: python (>= 2.4), python (<< 3), python-gtk2, python-glade2, python-pycurl, synaptic
-Conflicts: software-properties-gtk, software-properties-kde, software-properties-common
-Provides: software-properties-gtk, software-properties-kde, software-properties-common
-Replaces: software-properties-common
+Replaces: software-properties-common (<< 1), software-properties-gtk (<< 1), software-properties-kde (<< 1), python-software-properties (<< 1), python3-software-properties (<< 1)
 Description: Software Sources configuration tool
  Configure the sources for installable software and updates.
+
+Package: software-properties-common
+Architecture: all
+Depends: mintsources
+Description: Transitional package
+ This package is obsolete and replaced with mintsources.
+
+Package: software-properties-gtk
+Architecture: all
+Depends: mintsources
+Description: Transitional package
+ This package is obsolete and replaced with mintsources.
+
+Package: software-properties-kde
+Architecture: all
+Depends: mintsources
+Description: Transitional package
+ This package is obsolete and replaced with mintsources.
+
+Package: python-software-properties
+Architecture: all
+Depends: mintsources
+Description: Transitional package
+ This package is obsolete and replaced with mintsources.
+
+Package: python3-software-properties
+Architecture: all
+Depends: mintsources
+Description: Transitional package
+ This package is obsolete and replaced with mintsources.
