--- a/usr/share/mintsources/betsy/mintsources.conf
+++ b/usr/share/mintsources/betsy/mintsources.conf
@@ -19,25 +19,41 @@ main_identifier=main upstream import
 base_identifier=-updates main contrib non-free
 
 [key_1]
-pub=473041FA
-uid=Debian Archive Automatic Signing Key (6.0/squeeze) <ftpmaster@debian.org>
+pub=65558117
+uid=Christian Marillat <marillat@debian.org>
 
 [key_2]
-pub=B98321F9
-uid=Squeeze Stable Release Key <debian-release@lists.debian.org>
+pub=1F41B907
+uid=Christian Marillat <marillat@free.fr>
 
 [key_3]
-pub=46925553
-uid=Debian Archive Automatic Signing Key (7.0/wheezy) <ftpmaster@debian.org>
-
-[key_4]
-pub=65FFB764
-uid=Wheezy Stable Release Key <debian-release@lists.debian.org>
-
-[key_5]
 pub=0FF405B2
 uid=Clement Lefebvre (Linux Mint Package Repository v1) <root@linuxmint.com>
 
+[key_4]
+pub=473041FA
+uid=Debian Archive Automatic Signing Key (6.0/squeeze) <ftpmaster@debian.org>
+
+[key_5]
+pub=46925553
+uid=Debian Archive Automatic Signing Key (7.0/wheezy) <ftpmaster@debian.org>
+
 [key_6]
-pub=1F41B907
-uid=Christian Marillat <marillat@debian.org>
+pub=2B90D010
+uid=Debian Archive Automatic Signing Key (8/jessie) <ftpmaster@debian.org>
+
+[key_7]
+pub=C857C906
+uid=Debian Security Archive Automatic Signing Key (8/jessie) <ftpmaster@debian.org>
+
+[key_8]
+pub=518E17E1
+uid=Jessie Stable Release Key <debian-release@lists.debian.org>
+
+[key_9]
+pub=B98321F9
+uid=Squeeze Stable Release Key <debian-release@lists.debian.org>
+
+[key_10]
+pub=65FFB764
+uid=Wheezy Stable Release Key <debian-release@lists.debian.org>
