Updated desktop files

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -3,10 +3,9 @@ Name=Software Sources
 Name[am]=የሶፍትዌር ምንጮች
 Name[ar]=مصادر البرمجيات
 Name[be]=Крыніцы праграм
-Name[be@latin]=Крыніцы праграм
 Name[bg]=Софтуерни източници
 Name[bn]=সফটওয়্যারের উৎসসমূহ
-Name[bn_IN]=সফটওয়্যারের উৎসসমূহ
+Name[bs]=Izvori softvera
 Name[ca]=Fonts del programari
 Name[ca@valencia]=Fonts del programari
 Name[cs]=Zdroje softwaru
@@ -16,15 +15,15 @@ Name[de]=Anwendungspaketquellen
 Name[el]=Πηγές Λογισμικού
 Name[eo]=Programaraj fontoj
 Name[es]=Orígenes del software
-Name[es_AR]=Orígenes del software
 Name[et]=Tarkvaraallikad
 Name[eu]=Software-jatorriak
 Name[fa]=منابع برنامه ها
 Name[fi]=Ohjelmalähteet
 Name[fr]=Sources de logiciels
 Name[fr_CA]=Sources de logiciels
+Name[fy]=Softwareboarnen
 Name[ga]=Foinsí Bogearraí
-Name[gd]=Bunan-tùs a' bhathair-bhuig
+Name[gd]=Tùsan bathair-bhog
 Name[gl]=Orixes do software
 Name[he]=מקורות תוכנה
 Name[hr]=Softver repozitoriji
@@ -33,6 +32,8 @@ Name[id]=Sumber Perangkat Lunak
 Name[is]=Hugbúnaðarupptök
 Name[it]=Sorgenti software
 Name[ja]=ソフトウェアソース
+Name[ko]=소프트웨어소스
+Name[ku]=Çavkaniyên Bernameyan
 Name[ky]=Программа булактары
 Name[lt]=Programinės įrangos saugyklos
 Name[lv]=Programmatūras avoti
@@ -54,16 +55,15 @@ Name[ru]=Источники приложений
 Name[si]=මෘදුකාංග මූලාශ්‍රයන්
 Name[sk]=Zdroje softvéru
 Name[sl]=Programski viri
-Name[sq]=Burimet e Programeve
+Name[sq]=Burimet e programeve
 Name[sr]=Извори програма
-Name[sr@ijekavianlatin]=Извори програма
 Name[sr@latin]=Извори програма
 Name[sv]=Programkällor
 Name[ta]=மென்பொருள் மூலங்கள்
 Name[tg]=Манбаъҳои нармафзор
 Name[th]=แหล่งที่มาของซอฟต์แวร์
 Name[tr]=Yazılım Kaynakları
-Name[uk]=Джерела програмного забезпечення
+Name[uk]=Джерела проґрамного забезпечення
 Name[vi]=Nguồn Phần mềm
 Name[zh_CN]=软件源
 Name[zh_HK]=軟件來源
@@ -72,10 +72,9 @@ Comment=Configure the sources for installable software and updates
 Comment[am]=ምንጮችን ማዋቀር ለሚገጠሙ ሶፍትዌር እና ማሻሻያዎች
 Comment[ar]=إعداد المصادر للبرمجيات والتحديثات القابلة للتثبيت
 Comment[be]=Наставіць крыніцы праграм і абнаўленняў
-Comment[be@latin]=Наставіць крыніцы праграм і абнаўленняў
 Comment[bg]=Настройка на източниците за инсталиране и актуализиране на софтуер
 Comment[bn]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
-Comment[bn_IN]=ইনস্টলযোগ্য সফটওয়্যার ও আপডেটের জন্য উৎস কনফিগার করুন
+Comment[bs]=Podesite izvore za programe koje je moguće instalirati i ažurirati
 Comment[ca]=Configura les fonts per a les actualitzacions i el programari instal·lables
 Comment[ca@valencia]=Configura les fonts per a les actualitzacions i el programari instal·lables
 Comment[cs]=Nastavit zdroje pro instalovatelný software a aktualizace
@@ -85,15 +84,14 @@ Comment[de]=Quellen zum Installieren von Anwendungen und Aktualisierungen einric
 Comment[el]=Ρύθμιση των πηγών για λογισμικό προς εγκατάσταση και ενημερώσεις
 Comment[eo]=Agordi la fontojn de instaleblaj programaro kaj ĝisdatigoj
 Comment[es]=Configure los orígenes de las actualizaciones y el software instalable
-Comment[es_AR]=Configure los orígenes de las actualizaciones y el software instalable
-Comment[et]=Seadista allikaid paigaldatavale tarkvarale ja uuendustele
+Comment[et]=Paigaldatava tarkvara ja uuenduste allikate seadistamine
 Comment[eu]=Konfiguratu software eta eguneraketa instalagarrien jatorriak
 Comment[fa]=پیکر بندی کردن منابع برای برنامه ها و به روز رسانی های قابل نصب
-Comment[fi]=Hallitse ohjelmalähteet asennettaville sovelluksille ja päivityksille.
+Comment[fi]=Muokkaa asennettavien ohjelmien ja päivitysten lähteitä
 Comment[fr]=Configurer les sources d'installation de logiciels et de mises à jour
 Comment[fr_CA]=Configurer les sources d'installation de logiciels et de mises à jour
 Comment[ga]=Cumraigh na foinsí chun teacht ar bhogearraí gur féidir suiteáil is nuashonrú
-Comment[gd]=Rèitich na bunan-tùs airson bathar-bog so-stàlaidh agus ùrachaidhean
+Comment[gd]=Rèitich na tùsan airson bathar-bog agus ùrachaidhean a ghabhas a stàladh
 Comment[gl]=Configure as orixes para os programas e as actualizacións que se poden instalar
 Comment[he]=הגדרת מקורות תוכנה להתקנות ולעדכונים
 Comment[hr]=Postavite izvore za instalaciju i ažuriranje softvera
@@ -102,6 +100,7 @@ Comment[id]=Mengatur sumber pemasangan perangkat lunak dan pemutakhiran
 Comment[is]=Stilla upptök fyrir uppsetjanlegan hugbúnað og uppfærslur
 Comment[it]=Configura le sorgenti per il software installabile e per gli aggiornamenti
 Comment[ja]=インストール可能なソフトウェアおよびアップデートの配布元を設定します
+Comment[ko]=설치가능한 소프트웨어와 업데이트를 위한 소스를 설정합니다
 Comment[lt]=Nustatykite programinės įrangos diegimo ir atnaujinimo saugyklas
 Comment[lv]=Konfigurē jaunu programmu un atjauninājumu avotus
 Comment[mr]=सॉफ्टवेयर व सुधारणा (अपडेट्स) करिता स्रोत ठरवा
@@ -119,19 +118,18 @@ Comment[ru]=Настроить источники приложений и обн
 Comment[sk]=Nastaviť zdroje pre inštalovateľný softvér a aktualizácie
 Comment[sl]=Nastavite vire za namestljivo programsko opremo in posodobitve
 Comment[sq]=Konfiguro burimet për programet e instalueshme dhe përditësimet
-Comment[sr]=Подеси инсталационе изворе за програме и ажурирања
-Comment[sr@ijekavianlatin]=Подеси инсталационе изворе за програме и ажурирања
-Comment[sr@latin]=Подеси инсталационе изворе за програме и ажурирања
+Comment[sr]=Подесите изворе за програме и надоградње
+Comment[sr@latin]=Подесите изворе за програме и надоградње
 Comment[sv]=Konfigurera källorna för installerbara program och uppdateringar
 Comment[ta]=நிறுவத்தக்க மென்பொருட்கள் மற்றும் புதுப்பித்தல்களுக்கான மூலங்களைக் கட்டமைக்கவும்
 Comment[tg]=Танзим кардани манбаҳо барои нармафзор ва навсозиҳои насбшаванда
 Comment[th]=ปรับแต่งแหล่งของซอฟต์แวร์ที่ใช้ในการติดตั้งและปรับปรุงรุ่น
 Comment[tr]=Kurulabilir yazılım ve güncellemeler için kaynakları yapılandır
-Comment[uk]=Налаштуйте джерела встановлюваного програмного забезпечення і оновлень
+Comment[uk]=Налаштуйте джерела встановлюваного проґрамного забезпечення і оновлень
 Comment[vi]=Cấu hình các nguồn cài đặt phần mềm và cập nhật
 Comment[zh_CN]=配置用于安装和升级软件的源
-Comment[zh_HK]=設置可安裝的軟件及其更新之來源。
-Comment[zh_TW]=設定可安裝軟體與更新的來源
+Comment[zh_HK]=配置可安裝軟件及更新的來源。
+Comment[zh_TW]=設定可安裝軟體與更新的來源組態
 Exec=software-sources
 Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
 Terminal=false
