Added desktop item to Xfce settings

--- a/usr/share/applications/mintsources.desktop
+++ b/usr/share/applications/mintsources.desktop
@@ -131,11 +131,11 @@ Comment[zh_CN]=配置用于安装和升级软件的源
 Comment[zh_HK]=配置可安裝軟件及更新的來源。
 Comment[zh_TW]=設定可安裝軟體與更新的來源組態
 Exec=software-sources
-Icon=/usr/share/icons/hicolor/scalable/apps/software-sources.svg
+Icon=mintsources
 Terminal=false
 X-MultipleArgs=false
 Type=Application
-Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;
+Categories=GNOME;GTK;System;Settings;X-GNOME-SystemSettings;X-GNOME-Settings-Panel;XFCE;X-XFCE-SettingsDialog;X-XFCE-SystemSettings;
 X-GNOME-Settings-Panel=software-properties
 MimeType=text/x-apt-sources-list;
 X-KDE-SubstituteUID=true
