Fixed speeds not being converted properly

--- a/usr/share/mintsources/rafaela/mintsources.conf
+++ b/usr/share/mintsources/rafaela/mintsources.conf
@@ -7,7 +7,7 @@ use_ppas=true
 [mirrors]
 default=http://packages.linuxmint.com
 base_default=http://archive.ubuntu.com/ubuntu
-mirrors=/usr/share/python-apt/templates/LinuxMint.mirrors
+mirrors=/usr/share/mint-mirrors/linuxmint.list
 base_mirrors=/usr/share/python-apt/templates/Ubuntu.mirrors
 
 [optional_component_1]
